# like_keras

./: .gitignore  .order  BRANCH_COMPARISON_three_branches.md  IMPLEMENTATION_COMPARISON_dataset_infrastructure.md  IMPLEMENTATION_PLAN_updated.md  README.md  REFACTOR_PROGRESS.md  RobotSystem-graph.html  core-concepts.md  pyproject.toml  robotics-for-good.md
.cursor/: environment.json  setup-worktree-unix.sh  worktrees.json
.cursor/commands/: compare_parralel.md  mutating.md  test.md  write_tests.md
.cursor/rules/: cursor-rules.mdc  docstring.mdc  feature_workflow.mdc  markdown-naming.mdc  naming.mdc  testing.mdc  type-hints.mdc
docs/: IMPLEMENTATION_SUMMARY.md  autoformatting.md  component-design.md  core-concepts.md  data-dist.md  dataset.md  engines.md  folder-structure.md  graph.md  launch-system.md  lifecycle.md  sub-components.md  transport-system.md
docs/engine.md/: execution-engine.md  multi-machine-launch.md
docs/hyperparam_tunning/: hyperparam-tunning.md  metric-tracker.md
examples/: README.md  ex_01_simple_loop.py  ex_02_nested_messages.py  ex_03_graph_visualization.py  ex_04_urdf_import_export.py  ex_05_multi_engine.py  ex_XX_cart_pole.py  ex_XX_component_10_ways.py  ex_XX_gym_loop.py  ex_XX_mrf_in_a_box.py  ex_XX_system_launch.py  my_fav_system_config.py
examples/basic/ex_01_bandit/: prompt_py.md  system_v1.py  v1.py  v2.py  v3.py  v4.py  v5.py
examples/basic/ex_01_cartpole/: prompt_py.md  system_v1.py
examples/gym_configs/: gym1_config.py
lk/: __init__.py
lk/actor/: __init__.py
lk/actor/grasp/: grasp.py  grasp_finder.py  utils.py
lk/actuators/: __init__.py
lk/agent/: __init__.py  agent.py  random_agent.py
lk/common/: __init__.py  component.py  config.py  diagnostics_mixin.py  graph.py  node.py  objective_function.py  port.py  system.py  transport.py  web_server.py
lk/common/dataset/: __init__.py  backend.py  dataset.py  diff.py  memory_backend.py  pickle_backend.py  playback.py  recorder.py  viz.py
lk/common/diagonistics/: README.md  REFACTOR_SUMMARY.md
lk/common/examples/: web_server_example.py
lk/common/logger/: README.md  __init__.py  design-notes.md
lk/common/robot_description/: README.md  URDF_CONVERSION_README.md  URDF_IMPLEMENTATION_SUMMARY.md  __init__.py  arm_args.py  composite_description_helper.py  debug_description.xml  demo_urdf_conversion.py  description_types.py  design-notes.md  format_for_xacro.py  hand_args.py  joint_positions.py  robot_description.py  srdf_helper.py  urdf_converter.py  verify_robot_description.py
lk/common/transports/: __init__.py  dora_backend.py
lk/engines/: README.md  __init__.py  dora.py  engine.py  native.py
lk/engines/backends/: __init__.py  dora_node.py
lk/msgs/: README.md  __init__.py  diagnostics.py  msg.py  msg_utils.py
lk/msgs/data_dist/: README.md  RandomFloat.py  __init__.py  data_dist.py  float_dist.py  multi_binary_dist.py  sequence_dist.py  text_dist.py
lk/msgs/examples/: ex_XX_data_dist.py  ex_advanced_spaces.py  ex_data_dist_comprehensive.py
lk/msgs/lk/: __init__.py  msg.py
lk/msgs/random_msgs/: RandomFloat.py  __init__.py  data_dist.py  float_dist.py  int_dist.py  multi_binary_dist.py  random_float.py  random_int.py  sequence_dist.py  text_dist.py
lk/msgs/ros/: __init__.py  ros_msg.py
lk/msgs/visual_objects/: CompoundVisualObject.py  Frame.py  Grid.py  LineSegments.py  Material.py  PointCloud.py  RGBA.py  Urdf.py  UrdfFrame.py  VisualObject.py  __init__.py
lk/robot_description/: __init__.py
lk/sensors/: __init__.py
lk/utils/: README.md  __init__.py  bbox.py  changelog_utils.py  config_mixin.py  config_utils.py  config_utils_README.md  dataclass_utils.py  dot_dict_utils.py  file_utils.py  fusion_360.py  histogram.py  json_utils.py  jupyter_utils.py  kill_os_processes.py  lerp.py  matplotlib_utils.py  meshcat_utils.py  o3d_utils.py  os_utils.py  path.py  plane.py  plot_graph.py  pointcloud.py  prompt.py  str_utils.py  tempfile_utils.py  time_utils.py  torch_utils.py  transforms.py  xacro_utils.py  yaml_utils.py
lk/utils/examples/: config_test.json  config_test.yaml  ex_config_mixin.py  ex_xacro_resolve_packages.py
lk/utils/interial/: interial.py  (+1 more)
lk/world_model/: __init__.py
lk_viewer/: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  bidirectional-editing.md  cursor_opener_server.py  features.md  link.txt  requirements.txt  simple_rr_robot.py  start_react_flow.sh  start_viewer.py  test_cursor_links.html  viewer.html  viewer_server.py
lk_viewer/docs/: ways-to-expand.md
lk_viewer/react_flow_app/: index.html  package-lock.json  package.json  vite.config.js
lk_viewer/vscode_extension/: ARCHITECTURE.md  BIDIRECTIONAL_EDITING.md  PYTHON_BACKEND_README.md  QUICKSTART.md  README.md  SYSTEM_VISUALIZATION_WORKFLOW.md  package-lock.json  package.json  start.sh  tsconfig.json
pm/: README.md
pm/awesome_features/: ai-compile.md  dataset.md  diagonistics.md  nn-compile.md  port-based-components.md  robot-description.md
tests/: __init__.py  test_component.py  test_graph.py  test_msgs.py  test_port.py  test_system.py
(+533 files in other folders)
