[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lk"]

[project]
name = "like_keras"
version = "0.0.1"
dependencies = [
  # Bare-minimum runtime requirement
  "dacite",
  "numpy",
  "gymnasium",

]

[project.optional-dependencies]
# Install with `pip install .[core]` or `pip install .[full]`

testing = [

]

viz = [
  # Interactive graph visualization (static Mermaid.js graphs work without these)
  "dash",
  "dash-cytoscape",
]

full = [

  "opencv-contrib-python", # Updated Numpy dependency rules. Packages for Python 3.9+ are built with Numpy 2.x. Packages for older Python version are built with Numpy 1.x.
  "open3d",
  "torch",
  "torchvision",
  "wandb",
  
  # Interactive graph visualization
  "dash",
  "dash-cytoscape",

]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Please update your 'hppfcl' imports to 'coal'",
    "ignore:zmq.eventloop.ioloop is deprecated",
    "ignore:This function has been marked as deprecated"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

[tool.ruff]
line-length = 88
exclude = [
    "__pycache__",
    "node_modules",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
# Similar to Pinocchio's configuration
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "I",    # isort (import sorting)
    "PTH",  # flake8-use-pathlib
    "RUF",  # Ruff-specific rules
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]
extend-ignore = [
    "RUF048",  # Following Pinocchio's ignore
]

